# setuptools-pyproject-migration

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  towncrier.toml  tox.ini
.github/workflows/: docs.yml  main.yml  pre-merge.yml  release.yml  test.yml
changelog.d/: +active.misc.rst  +changelog-fragments-ci-check-pre-commit.misc.rst  +changelog-fragments-ci-check.misc.rst  +coverage-config.misc.rst  +distribute.misc.rst  +extrainterpreters.misc.rst  +missing-license-field.bugfix.rst  +pre-merge-commit-history.misc.rst  +pre-merge-refs.misc.rst  +py312.misc.txt  +python-prereleases.misc.rst  +python314.misc.rst  +ruff-pre-commit-hook-id.misc.rst  +slow-tests.misc.rst  +wheel-parsing-prerelease-versions.bugfix.rst  100.bugfix.rst  102.bugfix  102.fixed  105.feature.rst  105.misc.rst  107.removal.txt  109.misc.rst  111.bugfix.rst  112.feature.rst  117.bugfix.rst  132.bugfix.rst  133.bugfix.rst  134.bugfix.rst  135.bugfix.rst  136.bugfix.rst  139.bugfix.rst  152.bugfix.rst  164.bugfix.rst  18.doc  185.bugfix.rst  28.feature  29.feature  30.feature  31.feature  32.feature  (+9 more)
docs/: api-test.rst  api.rst  conf.py  history.rst  index.rst  motivation.rst  usage-cli.rst  usage-setuptools.rst
src/setuptools_pyproject_migration/: __init__.py  _long_description.py  _types.py  cli.py  dumpmeta.py
src/setuptools_pyproject_migration/_spdx/: __init__.py  data.py  exceptions.json  licenses.json  types.py
test_support/test_support/: __init__.py  distribution.py  filename_matching.py  metadata.py  package_filename.py
tests/: conftest.py  test_classifiers.py  test_contributors.py  test_deprecated_console_script.py  test_entry_points.py  test_entrypoint.py  test_filename_matching.py  test_license.py  test_license_files.py  test_long_description_utilities.py  test_optional_dependencies.py  test_readme.py  test_requires_python.py  test_setup_command.py  test_static_data.py  test_transform_contributors.py  test_urls.py
tests/distribution/: conftest.py  test_distribution_packages.py
