[build-system]
# TODO: remove "setuptools<=60.10.0" restriction once https://github.com/pypa/setuptools/issues/3744 is resolved
requires = ["setuptools>=56", "setuptools<=60.10.0; python_version < '3.12'", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.tox
    | \.venv
    | __pycache__
    | .+\.egg-info
    | build
    | dist
  )
)
'''

[tool.ruff]
line-length = 120
src = ["src"]
# Ruff is capable of inferring this from project.requires-python, but we don't
# set that because we keep our project configuration in setup.cfg, so list it
# explicitly here.
target-version = "py36"

[tool.setuptools_scm]
