[metadata]
name = setuptools-pyproject-migration
author = David Zaslavsky, Stuart Longland
author_email = diazona@ellipsix.net, me@vk4msl.com
description = Create a pyproject.toml file from setuptools configuration
long_description = file:README.rst
url = https://github.com/diazona/setuptools-pyproject-migration
project_urls =
	Documentation = https://setuptools-pyproject-migration.readthedocs.io/
	Source = https://github.com/diazona/setuptools-pyproject-migration
	Issues = https://github.com/diazona/setuptools-pyproject-migration/issues
classifiers =
	Development Status :: 2 - Pre-Alpha
	Environment :: Plugins
	Framework :: Setuptools Plugin
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Topic :: Software Development
	Topic :: System :: Archiving :: Packaging

[options]
packages = find:
package_dir =
	= src
include_package_data = true
python_requires = >=3.6
install_requires =
	pep508-parser
	setuptools
	tomlkit
	typing-extensions >=4, <5

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*
where = src

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-console-scripts >= 1.2
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-enabler >= 2.2; \
		python_version >= "3.8"

	# local
	importlib-metadata; \
		python_version < "3.8"
	packaging
	types-setuptools

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
distutils.commands =
	pyproject = setuptools_pyproject_migration:WritePyproject
