[metadata]
name = setuptools-pyproject-migration
author = David Zaslavsky, Stuart Longland
author_email = diazona@ellipsix.net, me@vk4msl.com
description = Create a pyproject.toml file from setuptools configuration
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/diazona/setuptools-pyproject-migration
project_urls =
	Documentation = https://setuptools-pyproject-migration.readthedocs.io/
	Source = https://github.com/diazona/setuptools-pyproject-migration
	Issues = https://github.com/diazona/setuptools-pyproject-migration/issues
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Plugins
	Framework :: Setuptools Plugin
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Topic :: Software Development
	Topic :: System :: Archiving :: Packaging

[options]
packages = find:
package_dir =
	= src
include_package_data = true
python_requires = >=3.6
install_requires =
	dataclasses; python_version < "3.7"
	packaging
	pep508-parser
	setuptools; python_version < "3.12"
	setuptools >= 66.1; python_version >= "3.12"
	tomlkit
	typing-extensions >=4, <5

[options.packages.find]
exclude =
    .github/
    .readthedocs.yaml
	build*
	dist*
	docs*
	tests*
where = src

[options.extras_require]
testing =
	# upstream
	pytest >= 7
	pytest-console-scripts >= 1.2
	pytest-cov
	pytest-enabler >= 2.2; \
		python_version >= "3.8"

	# local
	backports.cached_property; \
		python_version < "3.8"
	importlib-metadata; \
		python_version < "3.8"
	# no version of pyproject-metadata supports Python 3.6
	# pyproject-metadata 0.9.0 has breaking changes vs 0.8.1 and earlier.
	pyproject-metadata >= 0.9.0; \
		python_version >= "3.7"
	requests
	types-setuptools

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local
	sphinx-copybutton

[options.entry_points]
console_scripts =
	setup-to-pyproject = setuptools_pyproject_migration.cli:old_main
	setuptools-pyproject-migration = setuptools_pyproject_migration.cli:main
distutils.commands =
	pyproject = setuptools_pyproject_migration:WritePyproject
